src/objects/Unit_Placement__c.object
<CustomObject>
    <description>This is a Link Object that connects a Referral Contact to a Unit in the system</description>
    <fields>
        <fullName>Assigned_Unit__c</fullName>
        <label>Assigned Unit</label>
        <referenceTo>Property_Unit__c</referenceTo>
        <relationshipLabel>Unit Placements</relationshipLabel>
        <relationshipName>Unit_Placements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Up_Date__c</fullName>
        <label>Lease Up Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Placed_By__c</fullName>
        <inlineHelpText>Please select the SDHC Program responsible for placement.</inlineHelpText>
        <label>Placed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Moving Home</fullName>
                </value>
                <value>
                    <fullName>1000 Vets</fullName>
                </value>
                <value>
                    <fullName>Diversion</fullName>
                </value>
                <value>
                    <fullName>Prevention</fullName>
                </value>
                <value>
                    <fullName>Other Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Owner_s_Name__c</fullName>
        <formula>Assigned_Unit__r.Property_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Owner&apos;s Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <label>Tenant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Unit Placements</relationshipLabel>
        <relationshipName>Unit_Placements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Address__c</fullName>
        <formula>Assigned_Unit__r.Building__r.Street_Number_Start__c &amp; &quot; &quot; &amp; Assigned_Unit__r.Building__r.Street_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Address</label>
        <type>Text</type>
    </fields>
    <label>Unit Placement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tenant__c</columns>
        <columns>Assigned_Unit__c</columns>
        <columns>Unit_Address__c</columns>
        <columns>Lease_Up_Date__c</columns>
        <columns>Exit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>